--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,16 @@
 		<version>3.2.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>te4a.spring.boot.myapp9</groupId>
-	<artifactId>mybootapp9</artifactId>
+	<groupId>te4a.spring.boot.myapp11</groupId>
+	<artifactId>mybootapp11</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>mybootapp9</name>
+	<name>mybootapp11</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
-	
+
 		<dependency>
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -38,6 +38,30 @@
         	<artifactId>spring-boot-starter-thymeleaf</artifactId>
     	</dependency>
 
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-test</artifactId>
+    		<version>3.2.6</version>
+    		<scope>test</scope>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-core</artifactId>
+    		<version>6.1.8</version>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.hibernate.validator</groupId>
+    		<artifactId>hibernate-validator</artifactId>
+    		<version>8.0.1.Final</version>
+		</dependency>
+
+		<dependency>
+    		<groupId>jakarta.validation</groupId>
+    		<artifactId>jakarta.validation-api</artifactId>
+    		<version>3.0.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
