--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.2.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>te4a.spring.boot.myapp11</groupId>
-	<artifactId>mybootapp11</artifactId>
+	<groupId>te4a.spring.boot.myapp13</groupId>
+	<artifactId>mybootapp13</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>mybootapp11</name>
+	<name>mybootapp13</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
@@ -78,6 +78,21 @@
     		<groupId>org.webjars</groupId>
     		<artifactId>bootstrap</artifactId>
     		<version>3.3.7</version>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+  		</dependency>
+ 		<dependency>
+    		<groupId>org.thymeleaf.extras</groupId>
+    		<artifactId>thymeleaf-extras-springsecurity4</artifactId>
+			<version>3.0.2.RELEASE</version>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
 	</dependencies>
